<resources>
    <string name="app_name">Yummy China</string>
    <string name="explore">Explore Food</string>
    <string name="sh">Benbang Cuisine</string>
    <string name="hz">Zhe Cuisine</string>
    <string name="cd">Szechuan Cuisine</string>
    <string name="cs">Xiang Cuisine</string>
    <string name="bj">Jing Cuisine</string>
    <string name="gz">Yue Cuisine</string>
    <string name="hk">Gang Cuisine</string>
    <string name="benbang">BENBANG CUISINE</string>
    <string name="zgwd">中国味道</string>
    <string name="bbc">本帮菜</string>
    <string name="xlb">小笼包</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>

</resources>