<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".activity.RecipeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="RECIPE"
            app:expandedTitleTextAppearance="@style/MyExpandedTitle"
            app:collapsedTitleTextAppearance="@style/MyCollapsedTitle">
            <ImageView
                android:id="@+id/mealThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:src="@drawable/makexlb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">
                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textCategory"
                            android:text="@string/category"
                            android:fontFamily="@font/mochi"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/light_black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/category"
                            android:text="Traditional Dim Sum"
                            android:fontFamily="@font/hinds"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/light_black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/hard"
                            android:text="Hard Level"
                            android:fontFamily="@font/mochi"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/light_black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/hardlevel"
                            android:layout_width="match_parent"
                            android:layout_height="41dp"
                            android:fontFamily="@font/hinds"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="0dp"
                            android:text="* * * * *"
                            android:textColor="@color/yellow"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:fontFamily="@font/mochi"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/fog_red"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <ListView
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="vertical">
                    <TextView
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/Ingredients"
                        android:fontFamily="@font/mochi"
                        android:textColor="@color/light_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ingredients"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#00000000"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/youtube"
                        android:fontFamily="@font/mochi"
                        android:padding="14dp"
                        android:textSize="10sp"
                        android:textColor="@color/fog_red"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_play"
                        android:drawableStart="@drawable/ic_play" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#00000000"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/source"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:fontFamily="@font/mochi"
                        android:padding="14dp"
                        android:textSize="10sp"
                        android:textColor="@color/yellow"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_link"
                        android:drawableStart="@drawable/ic_link" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>